feat: support source registration rollback
